syntax = "proto3";

package checkout;

service CheckoutService {
    rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message AddToCartRequest {
    int32 user_id = 1;
    int32 product_id = 2;
    int32 quantity = 3;
    string reservation_token = 4; 
}

message AddToCartResponse {
    bool success = 1;
    string message = 2;
    int32 available_quantity = 3; 
}

message CreateOrderRequest {
    int32 user_id = 1;
    repeated CartItem items = 2;
}

message CartItem {
    int32 product_id = 1;
    int32 quantity = 2;
}

message CreateOrderResponse {
    bool success = 1;
    string order_id = 2;
}

message ProcessPaymentRequest {
    int32 user_id = 1;
    string order_id = 2;
    double amount = 3;
}

message ProcessPaymentResponse {
    bool success = 1;
    string transaction_id = 2;
}

